# public/swagger/swagger.json
@@ -9,34 +9,61 @@
         },
         "version": "1.0.0"
     },
-    "host": "niembinhan.com",
+    "host": "donate/",
     "basePath": "/",
     "schemes": [
         "http"
     ],
     "paths": {
-        "/api/events": {
+        "/api/posts": {
             "get": {
-                "description": "Return a user's first and last name",
+                "tags": [
+                    "Posts"
+                ],
+                "summary": [
+                    "Posts list"
+                ],
+                "description": "Return posts list",
                 "parameters": [
                     {
-                        "name": "d",
+                        "name": "order",
                         "in": "query",
-                        "description": "Date",
+                        "description": "Order Coulumn need to Order By, default is created_date",
                         "required": false,
                         "type": "string"
                     },
                     {
-                        "name": "m",
+                        "name": "length",
                         "in": "query",
-                        "description": "Month",
+                        "description": "Length of record need to response",
+                        "required": false,
+                        "type": "int"
+                    },
+                    {
+                        "name": "start",
+                        "in": "query",
+                        "description": "Start possition",
+                        "required": false,
+                        "type": "int"
+                    },
+                    {
+                        "name": "Seach",
+                        "in": "query",
+                        "description": "Seach value",
                         "required": false,
                         "type": "string"
                     },
                     {
-                        "name": "y",
+                        "name": "category",
                         "in": "query",
-                        "description": "Year",
+                        "description": "Category Id",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "orderDesc",
+                        "in": "query",
+                        "description": "orderDesc",
                         "required": false,
                         "type": "string"
                     }
@@ -61,6 +88,132 @@
                     },
                     "422": {
                         "description": "Missing Data"
+                    }
+                }
+            }
+        },
+        "/api/posts/{id}": {
+            "get": {
+                "tags": [
+                    "Posts"
+                ],
+                "summary": [
+                    "Post detail"
+                ],
+                "description": "Return post detail by Id",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Length of record need to response",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "properties": {
+                                "id": {
+                                    "type": "number",
+                                    "example": 1
+                                },
+                                "user_id": {
+                                    "type": "number",
+                                    "example": 1
+                                },
+                                "title": {
+                                    "type": "string",
+                                    "example": "First Project"
+                                },
+                                "content": {
+                                    "type": "string",
+                                    "example": "Hello World"
+                                },
+                                "photo_thumbnail": {
+                                    "type": "string",
+                                    "example": "..."
+                                },
+                                "full_photo": {
+                                    "type": "string",
+                                    "example": "..."
+                                },
+                                "due_day": {
+                                    "type": "string",
+                                    "example": "2000-12-03 12:20:20"
+                                },
+                                "status": {
+                                    "type": "number",
+                                    "example": 0
+                                },
+                                "user": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "number",
+                                            "example": 1
+                                        },
+                                        "first_name": {
+                                            "type": "string",
+                                            "example": "admin"
+                                        },
+                                        "last_name": {
+                                            "type": "string",
+                                            "example": "admin"
+                                        },
+                                        "username": {
+                                            "type": "string",
+                                            "example": "admin"
+                                        },
+                                        "email": {
+                                            "type": "string",
+                                            "example": "admin@gmail.com"
+                                        },
+                                        "address": {
+                                            "type": "string",
+                                            "example": "Danang, Vietnam"
+                                        },
+                                        "code_id": {
+                                            "type": "string",
+                                            "example": "admincode"
+                                        },
+                                        "personal_photo": {
+                                            "type": "string",
+                                            "example": "..."
+                                        },
+                                        "gender": {
+                                            "type": "number",
+                                            "example": 0
+                                        },
+                                        "created_at": {
+                                            "type": "string",
+                                            "example": "2000-12-03 12:20:20"
+                                        },
+                                        "updated_at": {
+                                            "type": "string",
+                                            "example": "2000-12-03 12:20:20"
+                                        }
+                                    },
+                                    "type": "object"
+                                },
+                                "created_at": {
+                                    "type": "string"
+                                },
+                                "updated_at": {
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    },
+                    "422": {
+                        "description": "Missing Data"
+                    },
+                    "404": {
+                        "description": "NotFound Data"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
                     }
                 }
             }
